docs/ufl/1.5.0/source/ufl.rst

.. _ufl_package:

ufl Package
===========

:mod:`ufl` Package
------------------

.. automodule:: ufl.__init__
    :noindex:

:mod:`algebra` Module
---------------------

.. automodule:: ufl.algebra
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`argument` Module
----------------------

.. automodule:: ufl.argument
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`assertions` Module
------------------------

.. automodule:: ufl.assertions
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`cell` Module
------------------

.. automodule:: ufl.cell
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`checks` Module
--------------------

.. automodule:: ufl.checks
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`classes` Module
---------------------

.. automodule:: ufl.classes
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`coefficient` Module
-------------------------

.. automodule:: ufl.coefficient
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`common` Module
--------------------

.. automodule:: ufl.common
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`compound_expressions` Module
----------------------------------

.. automodule:: ufl.compound_expressions
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`conditional` Module
-------------------------

.. automodule:: ufl.conditional
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`constantvalue` Module
---------------------------

.. automodule:: ufl.constantvalue
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`differentiation` Module
-----------------------------

.. automodule:: ufl.differentiation
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`domain` Module
--------------------

.. automodule:: ufl.domain
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`equation` Module
----------------------

.. automodule:: ufl.equation
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`exprcontainers` Module
----------------------------

.. automodule:: ufl.exprcontainers
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`exprequals` Module
------------------------

.. automodule:: ufl.exprequals
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`exproperators` Module
---------------------------

.. automodule:: ufl.exproperators
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`form` Module
------------------

.. automodule:: ufl.form
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`formoperators` Module
---------------------------

.. automodule:: ufl.formoperators
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`geometry` Module
----------------------

.. automodule:: ufl.geometry
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`index_combination_utils` Module
-------------------------------------

.. automodule:: ufl.index_combination_utils
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`indexed` Module
---------------------

.. automodule:: ufl.indexed
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`indexing` Module
----------------------

.. automodule:: ufl.indexing
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`indexsum` Module
----------------------

.. automodule:: ufl.indexsum
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`integral` Module
----------------------

.. automodule:: ufl.integral
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`log` Module
-----------------

.. automodule:: ufl.log
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`mathfunctions` Module
---------------------------

.. automodule:: ufl.mathfunctions
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`measure` Module
---------------------

.. automodule:: ufl.measure
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`objects` Module
---------------------

.. automodule:: ufl.objects
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`operators` Module
-----------------------

.. automodule:: ufl.operators
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`permutation` Module
-------------------------

.. automodule:: ufl.permutation
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`precedence` Module
------------------------

.. automodule:: ufl.precedence
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`protocols` Module
-----------------------

.. automodule:: ufl.protocols
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`referencevalue` Module
----------------------------

.. automodule:: ufl.referencevalue
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`restriction` Module
-------------------------

.. automodule:: ufl.restriction
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`sobolevspace` Module
--------------------------

.. automodule:: ufl.sobolevspace
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`sorting` Module
---------------------

.. automodule:: ufl.sorting
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`split_functions` Module
-----------------------------

.. automodule:: ufl.split_functions
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`tensoralgebra` Module
---------------------------

.. automodule:: ufl.tensoralgebra
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`tensors` Module
---------------------

.. automodule:: ufl.tensors
    :members:
    :undoc-members:
    :show-inheritance:

:mod:`variable` Module
----------------------

.. automodule:: ufl.variable
    :members:
    :undoc-members:
    :show-inheritance:

Subpackages
-----------

.. toctree::

    ufl.algorithms
    ufl.core
    ufl.corealg
    ufl.finiteelement
    ufl.utils

